# rye-workspace-example

./: README.md  pyproject.toml
awesome/: README.md  pyproject.toml
awesome/src/awesome/: __init__.py
awesome/src/awesome/diagrams/: base.py  core.py
awesome/tests/diagrams/: test_core.py
awesome/tests_awesome/: test_awesome.py
fabulous/: README.md  pyproject.toml
fabulous/src/fabulous/: __init__.py
fabulous/tests/: test_fabulous.py
src/rye_workspace_example/: __init__.py
tests/: test_workspace.py
