[project]
name = "rye-workspace-example"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "ftnext" }]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "rye_workspace_example:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["pytest>=8.0.1", "mypy>=1.8.0"]

[tool.rye.workspace]
members = ["awesome", "fabulous"]

[tool.rye.scripts]
test = { cmd = "pytest" }
typecheck = { cmd = "mypy ." }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rye_workspace_example"]

[tool.pytest.ini_options]
addopts = "-sv --ff --import-mode importlib"

[tool.mypy]
strict = true
ignore_missing_imports = true
disallow_any_unimported = true
